// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as Casey 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="addContactIcon"
        onPress={[Function]}
        size={24}
        type="MissionHub"
      />
    }
    shadow={true}
    testID="header"
    title="PEOPLE"
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": 1,
          "type": "person",
        },
        Object {
          "id": 2,
          "type": "person",
        },
        Object {
          "id": 3,
          "type": "person",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    personId="4224323"
    refreshing={false}
    sections={false}
    testID="peopleList"
  />
</View>
`;

exports[`renders correctly as Jean 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="searchIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    shadow={false}
    testID="header"
    title="PEOPLE"
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": "personal",
          "people": Array [
            Object {
              "id": 1,
              "type": "person",
            },
            Object {
              "id": 2,
              "type": "person",
            },
            Object {
              "id": 3,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 10,
          "name": "org 1",
          "people": Array [
            Object {
              "id": 11,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 20,
          "name": "org 2",
          "people": Array [
            Object {
              "id": 21,
              "type": "person",
            },
          ],
          "type": "organization",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    personId="4224323"
    refreshing={false}
    sections={true}
    testID="peopleList"
  />
</View>
`;

exports[`renders empty correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="addContactIcon"
        onPress={[Function]}
        size={24}
        type="MissionHub"
      />
    }
    shadow={true}
    testID="header"
    title="PEOPLE"
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": "me person",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    personId="4224323"
    refreshing={false}
    sections={false}
    testID="peopleList"
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <Button
      onPress={[Function]}
      pill={true}
      style={
        Object {
          "alignItems": "center",
          "height": 48,
          "width": 650,
        }
      }
      testID="bottomButton"
      text="TAKE A STEP WITH SOMEONE"
      type="secondary"
    />
  </RCTSafeAreaView>
</View>
`;
